Fixed toggle arrow spacing

--- a/index.css
+++ b/index.css
@@ -717,7 +717,7 @@ a.results-per-option {
   font-size: 1.325rem;
   cursor: pointer;
   padding: 0.5rem 0.5rem 0.25rem;
-  right: 0.5rem;
+  right: 0.625rem;
   bottom: 0.25rem;
 }
 
